# kvcrap

./: .gitignore  .sourcery.yaml  README.rst  android.txt  board.py  build_exe.bat  buildozer.spec  card_deck.py  cards.py  crapette.kv  crapette.py  kvcrap.spec  main.py  mypy.ini  piles.py  pyinstaller.spec  pyproject.toml  pytest.ini  requirements.txt  run_exe.bat  setup.cfg  setup.py
core/: board.py  decks.py  test_board.py
crapette/: __init__.py  __main__.py  board_manager.py  crapette.kv  crapette.py  custom_test_games.py  game_manager.py
crapette/brain/: __init__.py  brain.py  brainforce.py
crapette/core/: __init__.py  board.py  brain.py  brainforce.py  cards.py  decks.py  moves.py  piles.py  test_board.py  test_cards.py  test_piles.py
crapette/images/: README.rst  card_data.py  card_deck.py
crapette/widgets/: __init__.py  board_widget.py  board_widgets.py  card_widget.py  pile_widgets.py
rust/: Cargo.toml
rust/src/: brain.rs  core.rs  lib.rs  main.rs
rust/src/brain/: board_node.rs  board_score.rs  djikstra.rs
rust/src/core/: board.rs  cards.rs  custom_test_games.rs  decks.rs  game_manager.rs  moves.rs  piles.rs  players.rs  ranks.rs  suits.rs
src/: main.py
src/crapette/: crapette.kv  crapette.py  custom_test_games.py  game_manager.py
src/crapette/brain/: __init__.py  brain.py  brainforce.py
src/crapette/core/: __init__.py  board.py  cards.py  piles.py
src/crapette/images/: .gitignore  README.rst  card_data.py
src/crapette/widgets/: board_widget.py  card_widget.py  pile_widgets.py
tests/core/: test_board.py  test_cards.py  test_piles.py
ui/: crapette.kv  crapette.py
