[project]
name = "crapette"
description = "A crapette card playing game, made with kivy and love."
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Kivy",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Games/Entertainment :: Board Games",
    ]
keywords = ["game", "cards", "crapette"]
requires-python = ">=3.6"
dependencies = ["kivy>=1.10"]
dynamic = ["version"]

[[project.authors]]
name = "Joseph Martinot-Lagarde"
email = "contrebasse+kvcrap@gmail.com"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.license]
text = "GPLv3"

[project.urls]
Homepage = "https://github.com/Nodd/kvcrap"
"Bug Tracker" = "https://github.com/Nodd/kvcrap/issues"
Github = "https://github.com/Nodd/kvcrap"

[project.optional-dependencies]
build = [
    "pyinstaller>=4.0",
    ]
test = [
    "pytest",
    "pytest-cov",
    ]

[project.gui-scripts]
crapette = "crapette.crapette:main"

[tool.setuptools]
packages = ["crapette"]
zip-safe = false
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-data]
crapette = [
    "*.kv",
    "images/png/*/*.png",
    ]

[tool.setuptools.dynamic.version]
attr = "crapette.__version__"

[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov crapette"
testpaths = ["crapette"]

[tool.ruff]
select = ["E", "F"]
ignore = [
    "E501", # Line too long
    ]
