[metadata]
name = crapette
version = attr: crapette.__version__
description = A crapette card playing game, made with kivy and love.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/Nodd/kvcrap
author = Joseph Martinot-Lagarde
author_email = contrebasse+kvcrap@gmail.com
license = GPLv3
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Kivy
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: End Users/Desktop
    Topic :: Games/Entertainment :: Board Games
keywords = game, cards, crapette
project_urls =
    # Recognized labels are in https://github.com/pypa/warehouse/blob/main/warehouse/templates/packaging/detail.html
    Bug Tracker = https://github.com/Nodd/kvcrap/issues
    Github = https://github.com/Nodd/kvcrap

[options]
packages = crapette
zip_safe = False
include_package_data = True
install_requires =
    kivy>=1.10
python_requires = >=3.6

[options.package_data]
crapette = *.kv, images/png/*/*.png

[options.entry_points]
gui_scripts =
    crapette = crapette.crapette:main

[options.extras_require]
build =
    pyinstaller>=4.0
test =
    pytest
    pytest-cov
