[package]
name = "rust_brain"
description = "A Crapette Game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_brain"
crate-type = ["cdylib"]

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
regex = "1.9.5"
pyo3 = "0.19.0"
colored = "2.1.0"
env_logger = "0.11.5"
log = "0.4.22"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
